--- a/main.html
+++ b/main.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cards</title>
     <link rel="stylesheet" href="mian.css">
-    <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
-</head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.rtl.min.css" integrity="sha384-CfCrinSRH2IR6a4e6fy2q6ioOX7O6Mtm1L9vRvFZ1trBncWmMePhzvafv7oIcWiW" crossorigin="anonymous"></head>
 <body>
     <section id="cards-container" class="d-flex justify-content-around flex-wrap mt-5 col-11 gap-3 m-auto">
         
